--- a/function_demo/fuction.html
+++ b/function_demo/fuction.html
@@ -6,14 +6,14 @@
   <body>
     <script>
       // function declaration
-      function my_function(val) {
-        document.getElementById("demo").innerHTML = val * val;
-      }
-      my_function(5);
+      // function my_function(val) {
+      // document.getElementById("demo").innerHTML = val * val;
+      // }
+      // my_function(5);
     </script>
     <script>
       // function experssion
-      let x = function () {
+      let x = function (joo) {
         alert("hello! ");
       };
       // we can also assign x to another variable  y
