--- a/DOM advanced/index.html
+++ b/DOM advanced/index.html
@@ -52,15 +52,16 @@
         <div class="panel active" id="about">
           <p>Content for about tab...</p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
-            id nunc porta urna ornare rhoncus. Ut convallis ante at.
+            This site is all about book readers who wants to develop reading
+            skil and wants gain knowleage with the help of my first javaScript
+            trial site we can develop more
           </p>
         </div>
         <div class="panel" id="contact">
           <p>Content for contact tab...</p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
-            id nunc porta urna ornare rhoncus. Ut convallis ante at.
+            Any one who wants to cntact me can get me down the email description
+            below "yohannesgezahugne59@gmail.com"
           </p>
         </div>
       </div>
